force-app/main/default/objects/Round_Robin__c/fields/Number_of_Users_in_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users_in_Round_Robin__c</fullName>
    <label>Number of Users in Round Robin</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>