force-app/main/default/objects/Round_Robin__c/fields/RR_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>RR_Flow_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RR Flow Name</label>
    <referenceTo>FlowRecord</referenceTo>
    <relationshipLabel>Round Robins</relationshipLabel>
    <relationshipName>Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>