force-app/main/default/objects/Round_Robin__c/fields/Users_in_the_RR__c.field-meta.xml
<CustomField>
    <fullName>Users_in_the_RR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Users in the RR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>